[package]
name = "mtd"
version = "0.1.0"
edition = "2021"
license = "GPL3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.9.4"
argon2 = "0.3"

[lib]
name = "mtd"