[package]
name = "mtd"
version = "0.1.0"
description = "Cross-platform todo app with synchronization capabilities."
authors = ["Windore <windore.wi@protonmail.com>"]
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
argon2 = "0.4"

clap = { version = "3.2", features = ["derive"], optional = true }
dirs = { version = "4.0", optional = true }
rpassword = { version = "7.0", optional = true }

[features]
bin = ["clap", "dirs", "rpassword"]

[lib]
name = "mtd"

[[bin]]
name = "mtd"
path = "src/main.rs"
required-features = ["bin"]